# cubaga

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: CMakeLists.txt
debugger/: CMakeLists.txt
packager/: CMakeLists.txt  README.md  context.cpp  context.hpp  deps.c  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  options.cpp  options.hpp  texture.cpp  texture.hpp  utils.hpp
pbrgen/: CMakeLists.txt  deps.c  filtercube.vert  genbrdflut.frag  genbrdflut.vert  irradiancecube.frag  main.cpp  prefilterenvmap.frag
viewer/: CMakeLists.txt  axis.vert  cubaga.frag  cubaga.vert  main.cpp  model.frag  model.vert  skybox.vert
